--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="board"></div>
     <div class="center-br"><div>
+    <input type="button"value="一手前に戻す"onclick="unmove()">
     <script src="sketch.js"></script>
   
 
