--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html><html lang="ja"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
   </head>
   <body>
-    <div id="board"></div>
-    <input type="button"value="一手前に戻す"onclick="unmove()">
+    <div class="center-br">
+    <div id= "board"></div>
+    <input type="button"value="進む"onclick="forward()">
+    <input type="button"value="戻す"onclick="unmove()">
+    <input type="button"value="新規"onclick="init()">
     <script src="sketch.js"></script>
-  
-
-</body></html>
+      </div>
+  </body>
+</html>
