--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input type="button"value="進む"onclick="forward()">
     <input type="button"value="戻す"onclick="unmove()">
     <input type="button"value="新規"onclick="init()">
+    <p id= "messageArea"></p>
     <script src="sketch.js"></script>
   </body>
 </html>
